--- a/draft-scenarios/clash/dragon_valley.tex
+++ b/draft-scenarios/clash/dragon_valley.tex
@@ -105,7 +105,7 @@ If no player has achieved an immediate victory, the player with the most Victory
     \item "-1/+1": Scorching Earth -- All \svg{silver} and \svg{golden} Units start with 1 \svg{damage_red}
     \item "0/0": Clear Skies -- No effect. % or "calm before storm", "Sun is shining and birds are singing - " 
     \item "+1/-1": Fey Trickery -- Players Activate their Units in ascending order of Unit Initiative. %\svg{initiative}
-    \item "0/+1": Rocky Terrain -- All Ground Units gain Shield Token. %\svg{defense}
+    \item "0/+1": Rocky Terrain -- All Ground Units gain Defense Token. %\svg{defense}
     \item "+1/0": Tail Wind -- Flying Units gain +1 Movement. %\svg{unit_flying}
     \item "+1/+1": Perfect Conditions -- All Ranged Units gain advantage. %Or "Clear Skies" \svg{unit_ranged}
   \end{itemize} % Should this be made as a table?
