--- a/draft-scenarios/clash/dragon_valley.tex
+++ b/draft-scenarios/clash/dragon_valley.tex
@@ -108,8 +108,8 @@ If no player has achieved an immediate victory, the player with the most Victory
     \item "0/+1": Rocky Terrain -- All Ground Units gain Defense Token. %\svg{defense}
     \item "+1/0": Tail Wind -- Flying Units gain +1 Movement. %\svg{unit_flying}
     \item "+1/+1": Perfect Conditions -- All Ranged Units gain advantage. %Or "Clear Skies" \svg{unit_ranged}
+  \item \textit{The same condition may not occur two rounds in a row.}
   \end{itemize} % Should this be made as a table?
-  \textit{The same condition may not occur two rounds in a row.
   
   \item When fighting a Neutral Combat, a Player may add +1 difficulty only for an extra 5 \svg{gold} + Search (2) the Artifact or the Spell Deck. % could be moved to a timed event; Round 5: All Neutral Combats are considered +(I) on Far and Near Map tiles "
   \item Level VII Neutral Combat cannot be skipped.
