--- a/draft-scenarios/clash/dragon_valley.tex
+++ b/draft-scenarios/clash/dragon_valley.tex
@@ -82,7 +82,7 @@ If no player has achieved an immediate victory, the player with the most Victory
   \item[\textbf{\nth{4}}] \textbf{Round:} Remove all Black Cubes. %Remove Black Cubes from all locations that give Resources, Morale or Cards (but not from the Grail).
   \item[\textbf{\nth{8}}] \textbf{Round:} Repeat event of Round 4.
   \item[\textbf{\nth{9}}] \textbf{Round:} Repeat event of Round 1.
-  \item[\textbf{End}] \textbf{of \nth{10} Round:} Player(s) with the lowest XP roll 2 \svg{resource} dice.
+  \item[\textbf{End}] \textbf{of \nth{10} Round:} Player(s) whose Heroes have the least experience roll 2 \svg{resource} dice.
 \end{itemize}
 
 \subsection*{\MakeUppercase{Additional Rules}}
