--- a/draft-scenarios/clash/dragon_valley.tex
+++ b/draft-scenarios/clash/dragon_valley.tex
@@ -102,7 +102,7 @@ If no player has achieved an immediate victory, the player with the most Victory
     \item "-1/-1": Dense Fog -- All Ranged units gain disadvantage.
     \item "-1/0": Raining Ash -- All \svg{unit_flying} Units gain -2 \svg{initiative}. % / Or -1 movement on "Medium Hex Combat Board"
     \item "0/-1": Sinking Mud -- All \svg{unit_ground} Units move one space less.
-    \item "-1/+1": Scorching Earth -- All \svg{silver} and \svg{golden} Units start with 1 \svg{damage-red}.
+    \item "-1/+1": Scorching Earth -- All \svg{silver} and \svg{golden} Units start with 1 \svg{damage-table}. %\svg{damage-table}
     \item "0/0": Clear Skies -- No effect. % or "calm before storm", "Sun is shining and birds are singing - " 
     \item "+1/-1": Fey Trickery -- Players Activate their Units in ascending order of Unit Initiative. %\svg{initiative}
     \item "0/+1": Rocky Terrain -- All Ground Units gain \svg{defense} Token.
