--- a/draft-scenarios/clash/dragon_valley.tex
+++ b/draft-scenarios/clash/dragon_valley.tex
@@ -70,8 +70,8 @@ If no player has achieved an immediate victory, the player with the most Victory
 
 \begin{itemize}
  \item 5 VP for conquering a Dragon Utopia
- \item 4 VP for controlling 5 Mines or Settlements on Near and Center Tiles - \textit{once per game}
  \item 2 VP for each enemy Main Town captured - \textit{once per captured Faction}
+ \item 1 VP for every 5 Mines and Settlements on Near and Center Tiles
 % \item 1 VP for every Level of Experience of your Main Hero
 \end{itemize}
 
