--- a/draft-scenarios/clash/dragon_valley.tex
+++ b/draft-scenarios/clash/dragon_valley.tex
@@ -72,7 +72,7 @@ If no player has achieved an immediate victory, the player with the most Victory
  \item 5 VP for conquering a Dragon Utopia
  \item 2 VP for each enemy Main Town captured - \textit{once per captured Faction}
  \item 1 VP for every 5 Mines and Settlements on Near and Center Tiles
-% \item 1 VP for every Level of Experience of your Main Hero
+ \item All removed Artifacts count towards VPs
 \end{itemize}
 
 \subsection*{\MakeUppercase{Timed Events}}
@@ -125,25 +125,25 @@ If no player has achieved an immediate victory, the player with the most Victory
   \item When fighting a Neutral Combat, a Player may add +1 difficulty only for an extra 5 \svg{gold} + Search (2) the Artifact or the Spell Deck. % could be moved to a timed event; Round 5: All Neutral Combats are considered +(I) on Far and Near Map tiles "
   \item Level VII Neutral Combat cannot be skipped.
   \item If your Hero is Level VII, treat Level VI neutrals as Level VII, then gain 10 \svg{gold} for winning a Level VII Combat. % "and gain" / "and then gain" May be removed.
-  \item Settlements on Center (VI-VII) Map Tiles count as two Settlements in terms of rewards AND allow rolling one \svg{resource} or \svg{treasure} (reroll any \svg{experience}).
   \item If a player's Main Hero defeats another Main Hero, the defeated Player may change a Defense Statistic Card to an Empowered Defense Card. % or - Defeated Main Hero may Empower one Defense Statistic Card ("from his Deck of M&M")
+  \item Neutral Dragons can not be recruited in any way other than visiting a Dragon Utopia.
+  
+  \item Settlements on Center (VI-VII) Map Tiles count as two Settlements in terms of rewards AND allow rolling one \svg{resource} or \svg{treasure} (reroll any \svg{experience}).
+  
   \item Upon visiting a Grail Field, \textbf{choose one} and then put a Black Cube:
   \begin{itemize}
     \item Receive: 10 \svg{gold}, 4 \svg{building_materials}, and 2 \svg{valuables}.
     \item Roll 2 \svg{treasure} (reroll any \svg{experience}) and 2 \svg{resource}.
   \end{itemize}
-  \item When visiting a Dragon Utopia: Reshuffle the \svgunit{golden} and \svgunit{azure} Decks, then draw from \svgunit{azure} until you get 3 Dragons and choose 2 (3 on impossible difficulty), AND draw from \svgunit{golden} Neutral Deck until you get one Dragon.
-  \item Upon flagging Dragon Utopia, \textbf{choose one} and then put a Black Cube: 
-  \item When visiting a Dragon Utopia: Reshuffle the \svgunit{golden} and \svgunit{azure} Decks, then draw from \svgunit{azure} until you get 3 Dragons and choose 2 (3 on impossible difficulty), AND draw from \svgunit{golden} until you get one Dragon.
+  
+  \item When visiting a Dragon Utopia: Reshuffle the Neutral \svgunit{golden} and \svgunit{azure} Decks, then draw from \svgunit{azure} until you get 3 Dragons and choose 2 (+1 on impossible difficulty), AND draw from \svgunit{golden} until you get one Dragon.
   \item Upon flagging Dragon Utopia, \textbf{choose one} and then put a Black Cube:
-
   \begin{itemize}
     \item Recruit one of the defeated Dragons for half its \svg{gold} (rounded down) and its \svg{valuables} cost.
     \item Receive 15 \svg{gold} AND Search (3) any Artifact Deck.
   \end{itemize}
 %  \item A Dragon Utopia can only be flagged once. A flagged Dragon Utopia is considered to be an empty field to all Players. % or: "Once flagged, it is treated as an empty field to all players."
 \end{itemize}
-
 After visiting a Dragon Utopia, roll an Attack Die:
 \begin{itemize}
   \item[\textbf{-1}] -- Dragons' Curse: The defeated Dragons’ spirits curse the land! All Heroes lose \mbox{1 \svgeven{movement}} for the next Round.
