--- a/draft-scenarios/clash/dragon_valley.tex
+++ b/draft-scenarios/clash/dragon_valley.tex
@@ -87,7 +87,7 @@ If no player has achieved an immediate victory, the player with the most Victory
 
 \hommtable[]{31}{
   \centering
-  \textbf{Battlefield Conditions}\\
+  \MakeUppercase{Battlefield Conditions}\\
 
   \begin{tabularx}{\linewidth}{p{0.15\linewidth}XXXX}\\
   \darkcell[1.4]{-1/-1} 
