--- a/draft-scenarios/clash/dragon_valley.tex
+++ b/draft-scenarios/clash/dragon_valley.tex
@@ -12,7 +12,7 @@
 % \textit{The valley calls to those who seek adventure and riches beyond imagination. Its heart is guarded by Dragons older than time, its edges lined with settlements of those who dare to claim a foothold in this perilous land. But there is no safety here—only the promise of power for those who fight, and the certainty of death for those who falter.}
 
 \subsection*{\MakeUppercase{Scenario Length}}
-This Scenario plays out over 13 Rounds 
+This Scenario plays out over 13 Rounds
 %(or a shorter version over 9 Rounds).
 
 \subsection*{\MakeUppercase{Player Setup}}
@@ -85,29 +85,31 @@ If no player has achieved an immediate victory, the player with the most Victory
   \item[\textbf{End}] \textbf{of \nth{10} Round:} Player(s) whose Heroes have the least experience roll 2 \svg{resource} dice.
 \end{itemize}
 
-\hommtable[]{31}{
+\hommtable[]{33}{
   \centering
-  \MakeUppercase{Battlefield Conditions}\\
+  \medskip
+  \textbf{Battlefield Conditions}\\
+  \medskip
 
-  \begin{tabularx}{\linewidth}{p{0.15\linewidth}XXXX}\\
-  \darkcell[1.4]{-1/-1} 
-    & \lightcell[1.4]{Dense Fog -- All Ranged units gain disadvantage.}\\
-  \darkcell[1.4]{-1/0}
-    & \lightcell[1.4]{Raining Ash -- All \svg{unit_flying-table} Units gain -2 \svg{initiative-table}.}\\
-  \darkcell[1.4]{0/-1}
-    & \lightcell[1.4]{Sinking Mud -- All \svg{unit_ground-table} Units move one space less.}\\
-  \darkcell[1.4]{-1/+1}
-    & \lightcell[1.4]{Scorching Earth -- All \svg{silver} and \svg{golden} Units start with 1 \svg{damage-table}.}\\
-  \darkcell[1.4]{0/0}
-    & \lightcell[1.4]{Clear Skies -- No effect.}\\
-  \darkcell[1.4]{+1/-1}
-    & \lightcell[1.4]{Fey Trickery -- Players Activate their Units in ascending order of Unit Initiative.}\\
-  \darkcell[1.4]{0/+1}
-    & \lightcell[1.4]{Rocky Terrain -- All Ground Units gain \svg{defense_yellow} Token.}\\
-  \darkcell[1.4]{+1/0}
-    & \lightcell[1.4]{Tail Wind -- \svg{unit_flying-table} Units gain +1 Movement.}\\
+  \begin{tabularx}{0.95\linewidth}{p{0.15\linewidth}XXXX}\\
   \darkcell[1.4]{-1/-1}
-    & \lightcell[1.4]{Perfect Conditions -- All \svg{unit_ranged-table} Units gain advantage.}\\
+    & \lightcell[1.4]{Dense Fog – All Ranged units gain disadvantage.}\\
+  \darkcell[1.4]{-1/0}
+    & \lightcell[1.4]{Raining Ash – All \svg{unit_flying-table} Units gain -2 \svg{initiative-table}.}\\
+  \darkcell[1.4]{0/-1}
+    & \lightcell[1.4]{Sinking Mud – All \svg{unit_ground-table} Units move one space less.}\\
+  \darkcell[1.4]{-1/+1}
+    & \lightcell[1.4]{Scorching Earth – All \svgunit{silver} and \svgunit{golden} Units start with 1 \svg{damage-table}.}\\
+  \darkcell[1.4]{0/0}
+    & \lightcell[1.4]{Clear Skies – No effect.}\\
+  \darkcell[1.8]{+1/-1}
+    & \lightcell[1.8]{Fey Trickery – Players Activate their Units in ascending order of Unit Initiative.}\\
+  \darkcell[1.4]{0/+1}
+    & \lightcell[1.4]{Rocky Terrain – All Ground Units gain \svg{defense_yellow} Token.}\\
+  \darkcell[1.4]{+1/0}
+    & \lightcell[1.4]{Tail Wind – \svg{unit_flying-table} Units gain +1 Movement.}\\
+  \darkcell[1.4]{-1/-1}
+    & \lightcell[1.4]{Perfect Conditions – All \svg{unit_ranged-table} Units gain advantage.}\\
   \end{tabularx}
 }
 
@@ -121,21 +123,21 @@ If no player has achieved an immediate victory, the player with the most Victory
   \item Sanctuary effect: \textbf{once per Faction} gain a \svg{morale_positive} token and draw 1 Card.
   \item Obelisk effect: \textbf{once per Faction} roll one \svg{resource} and draw one Card.
   \item When fighting a Neutral Combat, a player may add +1 difficulty for an extra 5 \svg{gold} + Search (2) the Artifact or the Spell Deck.
-  \item Settlements on Center (VI-VII) Map Tiles are treated as two Settlements in terms of rewards AND allow rolling one \svg{resource} or \svg{treasure} (reroll any XP).  
+  \item Settlements on Center (VI-VII) Map Tiles are treated as two Settlements in terms of rewards AND allow rolling one \svg{resource} or \svg{treasure} (reroll any XP).
   \item When fighting a Neutral Combat, a Player may add +1 difficulty only for an extra 5 \svg{gold} + Search (2) the Artifact or the Spell Deck. % could be moved to a timed event; Round 5: All Neutral Combats are considered +(I) on Far and Near Map tiles "
   \item Level VII Neutral Combat cannot be skipped.
   \item If your Hero is Level VII, treat Level VI neutrals as Level VII, then gain 10 \svg{gold} for winning a Level VII Combat. % "and gain" / "and then gain" May be removed.
   \item If a player's Main Hero defeats another Main Hero, the defeated Player may change a Defense Statistic Card to an Empowered Defense Card. % or - Defeated Main Hero may Empower one Defense Statistic Card ("from his Deck of M&M")
   \item Neutral Dragons can not be recruited in any way other than visiting a Dragon Utopia.
-  
+
   \item Settlements on Center (VI-VII) Map Tiles count as two Settlements in terms of rewards AND allow rolling one \svg{resource} or \svg{treasure} (reroll any \svg{experience}).
-  
+
   \item Upon visiting a Grail Field, \textbf{choose one} and then put a Black Cube:
   \begin{itemize}
     \item Receive: 10 \svg{gold}, 4 \svg{building_materials}, and 2 \svg{valuables}.
     \item Roll 2 \svg{treasure} (reroll any \svg{experience}) and 2 \svg{resource}.
   \end{itemize}
-  
+
   \item When visiting a Dragon Utopia: Reshuffle the Neutral \svgunit{golden} and \svgunit{azure} Decks, then draw from \svgunit{azure} until you get 3 Dragons and choose 2 (+1 on impossible difficulty), AND draw from \svgunit{golden} until you get one Dragon.
   \item Upon flagging Dragon Utopia, \textbf{choose one} and then put a Black Cube:
   \begin{itemize}
@@ -147,7 +149,7 @@ If no player has achieved an immediate victory, the player with the most Victory
 After visiting a Dragon Utopia, roll an Attack Die:
 \begin{itemize}
   \item[\textbf{-1}] -- Dragons' Curse: The defeated Dragons’ spirits curse the land! All Heroes lose \mbox{1 \svgeven{movement}} for the next Round.
-  \item[\textbf{0}] -- Dragons' Revenge: All players must sacrifice a Unit before the end of the Round; that Unit's health is reduced to 0. 
+  \item[\textbf{0}] -- Dragons' Revenge: All players must sacrifice a Unit before the end of the Round; that Unit's health is reduced to 0.
   \item[ \textbf{+1}] -- Scattered Treasure: All players may immediately spend \mbox{1 \svgeven{movement}} to Search (2) the Artifact Deck.
 \end{itemize}
 
