Redefine table for multicol environment

--- a/draft-scenarios/clash/arcane_artillery.tex
+++ b/draft-scenarios/clash/arcane_artillery.tex
@@ -88,7 +88,7 @@ During this Scenario:
 
 \textbf{Players can spend one Arcane Spike during combat to cast:}
 
-\hommtable[]{16}{
+\hommtablemulticol[]{16}{
   \begin{tabularx}{0.95\linewidth}{X}
     \darkcell{\raisebox{-.2\height}{} \textbf{Arcane Artillery}}\\
     \lightcell[1.8]{\svg{activation-table} Deal 1 \svg{damage-table} to target Unit by placing an Arcane Spike on it.} \\
