--- a/draft-scenarios/clash/dragon_valley.tex
+++ b/draft-scenarios/clash/dragon_valley.tex
@@ -85,7 +85,7 @@ If no player has achieved an immediate victory, the player with the most Victory
   \item[\textbf{End}] \textbf{of \nth{10} Round:} Player(s) whose Heroes have the least experience roll 2 \svg{resource} dice.
 \end{itemize}
 
-\hommtable[]{33}{
+\hommtablemulticol[]{33}{
   \centering
   \medskip
   \textbf{Battlefield Conditions}\\
