--- a/draft-scenarios/clash/dragon_valley.tex
+++ b/draft-scenarios/clash/dragon_valley.tex
@@ -85,34 +85,6 @@ If no player has achieved an immediate victory, the player with the most Victory
   \item[\textbf{End}] \textbf{of \nth{10} Round:} Player(s) whose Heroes have the least experience roll 2 \svg{resource} dice.
 \end{itemize}
 
-\hommtablemulticol[]{33}{
-  \centering
-  \medskip
-  \textbf{Battlefield Conditions}\\
-  \medskip
-
-  \begin{tabularx}{0.95\linewidth}{p{0.15\linewidth}XXXX}\\
-  \darkcell[1.4]{-1/-1}
-    & \lightcell[1.4]{Dense Fog – All Ranged units gain disadvantage.}\\
-  \darkcell[1.4]{-1/0}
-    & \lightcell[1.4]{Raining Ash – All \svg{unit_flying-table} Units gain -2 \svg{initiative-table}.}\\
-  \darkcell[1.4]{0/-1}
-    & \lightcell[1.4]{Sinking Mud – All \svg{unit_ground-table} Units move one space less.}\\
-  \darkcell[1.4]{-1/+1}
-    & \lightcell[1.4]{Scorching Earth – All \svgunit{silver} and \svgunit{golden} Units start with 1 \svg{damage-table}.}\\
-  \darkcell[1.4]{0/0}
-    & \lightcell[1.4]{Clear Skies – No effect.}\\
-  \darkcell[1.8]{+1/-1}
-    & \lightcell[1.8]{Fey Trickery – Players Activate their Units in ascending order of Unit Initiative.}\\
-  \darkcell[1.4]{0/+1}
-    & \lightcell[1.4]{Rocky Terrain – All Ground Units gain \svg{defense_yellow} Token.}\\
-  \darkcell[1.4]{+1/0}
-    & \lightcell[1.4]{Tail Wind – \svg{unit_flying-table} Units gain +1 Movement.}\\
-  \darkcell[1.4]{-1/-1}
-    & \lightcell[1.4]{Perfect Conditions – All \svg{unit_ranged-table} Units gain advantage.}\\
-  \end{tabularx}
-}
-
 \subsection*{\MakeUppercase{Additional Rules}}
 \begin{itemize}
   \item Remove ``View Earth'' from the Spell Deck.
@@ -153,16 +125,38 @@ After visiting a Dragon Utopia, roll an Attack Die:
   \item[ \textbf{+1}] -- Scattered Treasure: All players may immediately spend \mbox{1 \svgeven{movement}} to Search (2) the Artifact Deck.
 \end{itemize}
 
+\hommtablemulticol[]{33}{
+  \centering
+  \medskip
+  \textbf{Battlefield Conditions}\\
+  \medskip
+
+  \begin{tabularx}{0.95\linewidth}{p{0.15\linewidth}XXXX}\\
+  \darkcell[1.4]{-1/-1}
+    & \lightcell[1.4]{Dense Fog – All Ranged units gain disadvantage.}\\
+  \darkcell[1.4]{-1/0}
+    & \lightcell[1.4]{Raining Ash – All \svg{unit_flying-table} Units gain -2 \svg{initiative-table}.}\\
+  \darkcell[1.4]{0/-1}
+    & \lightcell[1.4]{Sinking Mud – All \svg{unit_ground-table} Units move one space less.}\\
+  \darkcell[1.4]{-1/+1}
+    & \lightcell[1.4]{Scorching Earth – All \svgunit{silver} and \svgunit{golden} Units start with 1 \svg{damage-table}.}\\
+  \darkcell[1.4]{0/0}
+    & \lightcell[1.4]{Clear Skies – No effect.}\\
+  \darkcell[1.8]{+1/-1}
+    & \lightcell[1.8]{Fey Trickery – Players Activate their Units in ascending order of Unit Initiative.}\\
+  \darkcell[1.4]{0/+1}
+    & \lightcell[1.4]{Rocky Terrain – All Ground Units gain \svg{defense_yellow} Token.}\\
+  \darkcell[1.4]{+1/0}
+    & \lightcell[1.4]{Tail Wind – \svg{unit_flying-table} Units gain +1 Movement.}\\
+  \darkcell[1.4]{-1/-1}
+    & \lightcell[1.4]{Perfect Conditions – All \svg{unit_ranged-table} Units gain advantage.}\\
+  \end{tabularx}
+}
+
 \subsection*{\MakeUppercase{Suggested Houserules}}
 \begin{itemize}
-  \item Trading Posts - on a single visit, trade Resources and remove Cards, OR buy a War Machine. %"buy a war machine", or "buy war machines"?
-%  \item Fighting Neutral Units entails the following:
-%  \begin{itemize}
-%    \item No Combat Round limit
-%    \item On Hard+ difficulty, increase the difficulty of I-IV encounters by one
-%    \item Gain Field Level × \svg{gold} as an additional reward
-%  \end{itemize}
-  \item \href{https://boardgamegeek.com/thread/3445901/custom-hex-combat-board}{Medium Hex combat board}.
+  \item Trading Posts - on a single visit, trade Resources and remove Cards, OR buy a War Machine.
+  \item \href{https://boardgamegeek.com/thread/3445901/custom-hex-combat-board}{Compact Battlefield}.
   \item \href{https://boardgamegeek.com/thread/3449937/houserule-for-stacking-more-than-pack}{Stacking more than Pack} - Start with Several \svgunit{bronze} Units instead of Few.
 \end{itemize}
 
