--- a/draft-scenarios/coops/stand_united.tex
+++ b/draft-scenarios/coops/stand_united.tex
@@ -50,7 +50,7 @@ Take the following Map Tiles and arrange them as shown in the Scenario map layou
 
 \subsection*{\MakeUppercase{Victory Conditions}}
 
-After every player won a fight in the Dragon Utopia, all players win the scenario.
+After every player won a fight in the Dragon Utopia, all players win the Scenario.
 
 \subsection*{\MakeUppercase{Defeat Conditions}}
 
@@ -73,14 +73,14 @@ At least one player failed to beat Dragon Utopia by the end of Round 9.
 \subsection*{\MakeUppercase{Additional Rules}}
 
 \begin{itemize}
-  \item Remove both Azure Dragons cards from the neutral units deck, set one of them aside for later use.
-  \item Players cannot recruit secondary heroes.
+  \item Remove both Azure Dragons Cards from the neutral Units Deck, set one of them aside for later use.
+  \item Players cannot recruit secondary Heroes.
   \item Level VII combat cannot be skipped by diplomacy, or any other means.
-  \item Players can use their 🔨Build Token to initiate trade with one other chosen player. The two players can freely exchange resources and can exchange artifacts or spells from their hand as if their heroes were adjacent.
-  \item During a game players assemble a shared army. Every player can field units from the shared army during combat (Shared units' \svg{map} Map abilities can be activated each round by only one player).
-  \item Upon flagging an Obelisk, discard the top card from each neutral unit deck except azure. You can recruit one of these units. Units bought this way go into shared army.
-  \item When fighting on Dragon Utopia one of the neutral Azure Units is always Azure Dragons and the neutral army uses the AI card deck. Reshuffle AI deck and AI spell deck at the end of combat.
-  \item After winning a fight at Dragon Utopia, no cube is placed on the dragon utopia. The Victorious Player puts one of their surviving faction units into the shared army and can redistribute their remaining resources among other players, after which that Player gets removed from the game.
+  \item Players can use their 🔨Build Token to initiate trade with one other chosen player. The two players can freely exchange resources and can exchange artifacts or spells from their hand as if their Heroes were adjacent.
+  \item During a game players assemble a shared army. Every player can field Units from the shared army during combat (Shared Units' \svg{map} Map abilities can be activated each Round by only one player).
+  \item Upon flagging an Obelisk, discard the top Card from each neutral unit Deck except azure. You can recruit one of these Units. Units bought this way go into shared army.
+  \item When fighting on Dragon Utopia one of the neutral Azure Units is always Azure Dragons and the neutral army uses the AI Card Deck. Reshuffle AI Deck and AI Spell Deck at the end of combat.
+  \item After winning a fight at Dragon Utopia, no Cube is placed on the dragon utopia. The Victorious Player puts one of their surviving faction Units into the shared army and can redistribute their remaining resources among other players, after which that Player gets removed from the game.
 \end{itemize}
 
 \columnbreak
