Grammar and clarity fixes

--- a/draft-scenarios/coops/stand_united.tex
+++ b/draft-scenarios/coops/stand_united.tex
@@ -7,7 +7,7 @@
 
 \textbf{Source:} \href{https://discord.com/channels/740870068178649108/1332731339614453802/1332731339614453802}{Archon Studio Discord}
 
-\textit{Evil Dragon Lords threaten entire Enroth. Heroes, with their armies united, march against them in an epic final stand.}
+\textit{Evil Dragon Lords threaten the entire Enroth. Heroes, with their armies united, march against them in an epic final stand.}
 
 \subsection*{\MakeUppercase{Scenario Length}}
 
@@ -50,11 +50,11 @@ Take the following Map Tiles and arrange them as shown in the Scenario map layou
 
 \subsection*{\MakeUppercase{Victory Conditions}}
 
-After every player won a fight in the Dragon Utopia, all players win the Scenario.
+All players win the Scenario when each player has won a fight in the Dragon Utopia.
 
 \subsection*{\MakeUppercase{Defeat Conditions}}
 
-At least one player failed to beat Dragon Utopia by the end of Round 9.
+If at least one player has failed to defeat the Dragon Utopia by the end of Round 9, the Scenario is lost.
 
 \subsection*{\MakeUppercase{Timed Events}}
 \textbf{\nth{4} Round:}
@@ -73,14 +73,14 @@ At least one player failed to beat Dragon Utopia by the end of Round 9.
 \subsection*{\MakeUppercase{Additional Rules}}
 
 \begin{itemize}
-  \item Remove both Azure Dragons Cards from the neutral Units Deck, set one of them aside for later use.
+  \item Remove both Azure Dragons Cards from the \svgunit{azure} Neutral Units Deck and set one of them aside for later use.
   \item Players cannot recruit secondary Heroes.
-  \item Level VII combat cannot be skipped by diplomacy, or any other means.
-  \item Players can use their 🔨Build Token to initiate trade with one other chosen player. The two players can freely exchange resources and can exchange artifacts or spells from their hand as if their Heroes were adjacent.
-  \item During a game players assemble a shared army. Every player can field Units from the shared army during combat (Shared Units' \svg{map} Map abilities can be activated each Round by only one player).
-  \item Upon flagging an Obelisk, discard the top Card from each neutral unit Deck except azure. You can recruit one of these Units. Units bought this way go into shared army.
-  \item When fighting on Dragon Utopia one of the neutral Azure Units is always Azure Dragons and the neutral army uses the AI Card Deck. Reshuffle AI Deck and AI Spell Deck at the end of combat.
-  \item After winning a fight at Dragon Utopia, no Cube is placed on the dragon utopia. The Victorious Player puts one of their surviving faction Units into the shared army and can redistribute their remaining resources among other players, after which that Player gets removed from the game.
+  \item Level VII Combat cannot be skipped by diplomacy or any other means.
+  \item Players can use their Build Token to initiate trade with one other chosen player. The two players can freely exchange resources and can exchange Artifacts or Spells from their hand as if their Heroes were adjacent.
+  \item During the game, players assemble a shared army. Every player can field Units from the shared army during combat (Shared Units' \svg{map} abilities can be activated each Round by only one player).
+  \item Upon flagging an Obelisk, discard the top Card from each neutral Units Deck except \svgunit{azure}. You can recruit one of these Units. Units recruited this way go into the shared army.
+  \item When fighting on Dragon Utopia, one of the Neutral \svgunit{azure} Units is always the Azure Dragon and the neutral army uses the AI Deck. Reshuffle the AI Deck and AI Spell Deck at the end of Combat.
+  \item After winning Combat at Dragon Utopia, no Faction Cube is placed on the Dragon Utopia Field. The victorious player puts one of their surviving Faction Units into the shared army and can redistribute their remaining resources among other players, after which that player gets removed from the game.
 \end{itemize}
 
 \columnbreak
